<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/Wide"
        tools:context=".presentation.screen.MainActivity">

        <TextView
            android:id="@+id/textView5"
            style="@style/Wrap.Width0dp"
            android:layout_margin="30dp"
            android:text="@string/my_account_activation_code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/activationCodeEditText"
            style="@style/Wrap.Width0dp"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="30dp"
            android:hint="@string/my_account_enter_your_activation_code"
            android:textColorHint="@color/edit_text_hint_color"
            app:layout_constraintEnd_toEndOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/submitButton"
            style="@style/Wrap"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activationCodeEditText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>