<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.tevibox.tvplay.presentation.viewmodel.SignUpViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context=".presentation.screen.MainActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.07" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.12" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.8" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#202020"
            android:padding="5dp"
            android:text="@string/registration_create_a_new_account"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline3" />

        <ImageView
            android:id="@+id/logoImageView"
            style="@style/LogoImageView"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/accountEditText"
            style="@style/Wrap.Width0dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:hint="@string/registration_account"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/logoImageView"
            tools:drawableEnd="@drawable/ic_baseline_error_outline_24" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:hint="@string/registration_new_password"
            android:inputType="textPassword"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="@+id/accountEditText"
            app:layout_constraintStart_toStartOf="@+id/accountEditText"
            app:layout_constraintTop_toBottomOf="@+id/accountEditText"
            tools:drawableEnd="@drawable/ic_baseline_error_outline_24" />

        <EditText
            android:id="@+id/confirmPasswordEditText"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:hint="@string/registration_confirm_password"
            android:inputType="textPassword"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="@+id/accountEditText"
            app:layout_constraintStart_toStartOf="@+id/accountEditText"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
            tools:drawableEnd="@drawable/ic_baseline_error_outline_24" />

        <Button
            android:id="@+id/submitButton"
            style="@style/Wrap"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:text="@string/registration_submit"
            app:layout_constraintEnd_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/confirmPasswordEditText" />

        <Button
            android:id="@+id/returnButton"
            style="@style/Wrap"
            android:layout_height="35dp"
            android:layout_marginStart="10dp"
            android:onClick="@{()->viewModel.navigateToBack()}"
            android:text="@string/registration_return"
            app:layout_constraintBottom_toBottomOf="@+id/submitButton"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toTopOf="@+id/submitButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>